--- a/art_galery/package.json
+++ b/art_galery/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "3.2.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
